[package]
name = "generational-indextree"
version = "1.0.0"
license = "MIT"
readme = "README.md"
keywords = ["tree", "arena", "index", "indextree", "generational"]
authors = ["Barry van Acker <barry.van.acker@rubix.nl>"]
repository = "https://gitlab.com/barry.van.acker/generational-indextree"
homepage = "https://gitlab.com/barry.van.acker/generational-indextree"
documentation = "https://docs.rs/generational-indextree"
description = "Arena based tree structure by using indices instead of reference counted pointers"
categories = ["data-structures"]
edition = "2018"

[features]
default = ["std"]
deser = [ "serde" ]
std = []

[dependencies]
generational-arena = "0.2.7"
#rayon = { version = "1.0.3", optional = true }
serde = { version = "1.0.90", features = ["derive"], optional = true }

[[example]]
name = "parallel_iteration"
required-features = ["par_iter"]

[[example]]
name = "simple"
