[package]
name = "generational-indextree"
version = "1.1.2"
license = "MIT"
readme = "README.md"
keywords = ["tree", "arena", "index", "indextree", "generational"]
authors = ["Barry van Acker <barry.van.acker@rubix.nl>"]
repository = "https://gitlab.com/barry.van.acker/generational-indextree"
homepage = "https://gitlab.com/barry.van.acker/generational-indextree"
documentation = "https://docs.rs/generational-indextree"
description = "Arena based tree structure by using indices instead of reference counted pointers"
categories = ["data-structures"]
edition = "2018"

[features]
default = ["std"]
deser = [ "serde" ]
std = []

[dependencies]
generational-arena = "0.2.8"
serde = { version = "1.0.115", features = ["derive"], optional = true }

[[example]]
name = "simple"
